[metadata]
license_file = COPYING
platform = Linux
classifiers =
    Programming Language :: Python :: 3.5
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: Desktop Environment
    Topic :: Software Development :: Object Brokering

[bdist_wheel]
python-tag = py35
#plat-name = linux
